--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.3.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation "androidx.navigation:navigation-compose:2.5.0"
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
 
 
     testImplementation 'junit:junit:4.13.2'
